--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 ﻿# version format
 version: 0.1.{build}
 
-clone_folder: c:\gopath\src\github.com\$username\$project
+clone_folder: c:\gopath\src\github.com\aegoroff\solt
 
 # branches to build
 branches:
