--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ install:
   - go get -u "github.com/anknown/ahocorasick"
   - go get -u "github.com/dustin/go-humanize"
   - go get -u "github.com/voxelbrain/goptions"
+  - go get -u "github.com/stretchr/testify/assert"
 
 stack: go 1.11
 
