--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,12 +32,12 @@ stack: go 1.11
 image: Visual Studio 2017
 
 build_script:
-  - go build -ldflags "-X main.Version=0.1.{build}" -o buildOutput\solt solt
+  - go build -ldflags "-X main.Version=0.1.{build}" solt
 
 test_script:
   - go test ./...
 
 artifacts:
-  - path: buildOutput/solt
+  - path: solt.exe
     name: binary
 
