--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ stack: go 1.11
 image: Visual Studio 2017
 
 build_script:
-  - go build -ldflags "-X main.Version=0.1.{build}" solt
+  - go build -ldflags "-X main.Version=%APPVEYOR_BUILD_VERSION%" solt
 
 test_script:
   - go test ./...
