--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,8 +37,11 @@ build_script:
 test_script:
   - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+after_test:
+  - ps: |
+      $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
+      Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
+      bash codecov.sh -f "coverage.txt" -t $env:CODECOV_TOKEN
 
 artifacts:
   - path: solt.exe
