--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,7 @@ install:
   - go get -u "github.com/stretchr/testify/assert"
   - go get -u "github.com/aegoroff/godatastruct/rbtree"
   - go get -u "github.com/akutz/sortfold"
+  - go get -u "gonum.org/v1/gonum/graph/simple"
 
 stack: go 1.11
 
