--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,9 +31,9 @@ install:
   - go get -u "github.com/akutz/sortfold"
   - go get -u "gonum.org/v1/gonum/graph/simple"
 
-stack: go 1.14
+stack: go ^1.14
 
-image: Visual Studio 2017
+image: Visual Studio 2019
 
 build_script:
   - go build -ldflags "-X solt/cmd.Version=%APPVEYOR_BUILD_VERSION%" solt
