--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -52,6 +52,7 @@ brews:
       email: "egoroff@gmail.com"
     homepage: "https://github.com/aegoroff/solt"
     description: "A small commandline app written in Go that allows you to easily analyze sources and Microsoft Visual Studio solutions and projects."
+    license: "MIT"
 
 signs:
   - artifacts: checksum
