--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -51,7 +51,7 @@ brews:
       name: "Alexander Egorov"
       email: "egoroff@gmail.com"
     test: |
-        system "#{bin}/dirstat ver"
+        system "#{bin}/solt ver"
     homepage: "https://github.com/aegoroff/solt"
     description: "A small commandline app written in Go that allows you to easily analyze sources and Microsoft Visual Studio solutions and projects."
     license: "MIT"
