feature: scoop support to distribute binaries under Windows

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -56,6 +56,14 @@ brews:
     description: "Small console app written in Go that allows you to easily analyze sources and Microsoft Visual Studio solutions and projects"
     license: "MIT"
 
+scoop:
+  bucket:
+    owner: aegoroff
+    name: scoop-bucket
+  homepage:  https://github.com/aegoroff/solt
+  description: Small console app written in Go that allows you to easily analyze sources and Microsoft Visual Studio solutions and projects
+  license: MIT
+
 signs:
   - artifacts: checksum
 
