docs: more changelog exclusion patterns

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -76,5 +76,7 @@ changelog:
   filters:
     exclude:
       - "^docs:"
+      - "^dosc:"
+      - "^style:"
       - "^test:"
       - "^refactoring:"
