--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ build_script:
   - go build -ldflags "-s -w -X solt/cmd.Version=%APPVEYOR_BUILD_VERSION%" solt
 
 test_script:
-  - go test -coverprofile=coverage.txt -coverpkg solt/internal/sys,solt/msvc,solt/cmd,solt/internal/fw,solt/internal/ux,solt/internal/out,solt/cmd/info,solt/cmd/nuget,solt/cmd/lostfiles,solt/cmd/lostprojects,solt/solution -covermode=atomic solt/...
+  - go test -coverprofile=coverage.txt -coverpkg solt/internal/sys,solt/msvc,solt/cmd,solt/internal/fw,solt/internal/ux,solt/internal/out,solt/cmd/in,solt/cmd/nu,solt/cmd/lf,solt/cmd/lp,solt/cmd/va,solt/solution -covermode=atomic solt/...
 
 after_test:
   - ps: |
