--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.x
+    - name: Set up Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
@@ -29,8 +29,14 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: gox -osarch="linux/amd64 windows/amd64 darwin/amd64 darwin/arm64" -ldflags "-s -w -X solt/cmd.Version=$GITHUB_RUN_NUMBER" solt
+      run: gox -osarch="linux/amd64 windows/amd64 darwin/amd64 darwin/arm64" -ldflags "-s -w -X solt/cmd.Version=${{ env.GITHUB_RUN_NUMBER }}" solt
 
     - name: Test
       run: go test -coverprofile=coverage.txt -coverpkg solt/internal/sys,solt/msvc,solt/cmd,solt/internal/fw,solt/internal/ux,solt/internal/out,solt/cmd/in,solt/cmd/nu,solt/cmd/lf,solt/cmd/lp,solt/cmd/va,solt/solution -covermode=atomic solt/...
+
+    - name: Send coverage
+      run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov -t ${{ env.CODECOV_TOKEN }}
 
