--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,18 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        build: [ linux, darwin, windows ]
+        include:
+          - build: linux
+            os: ubuntu-latest
+          - build: darwin
+            os: macos-latest
+          - build: windows
+            os: windows-latest
+
     steps:
 
     - name: Set up Go
@@ -29,12 +40,13 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: gox -osarch="linux/amd64 windows/amd64 darwin/amd64 darwin/arm64" -ldflags "-s -w -X solt/cmd.Version=${{ github.run_number }}" solt
+      run: gox -osarch="${{ matrix.build }}/amd64 ${{ matrix.build }}/arm64" -ldflags "-s -w -X solt/cmd.Version=${{ github.run_number }}" solt
 
     - name: Test
       run: go test -coverprofile=coverage.txt -coverpkg solt/internal/sys,solt/msvc,solt/cmd,solt/internal/fw,solt/internal/ux,solt/internal/out,solt/cmd/in,solt/cmd/nu,solt/cmd/lf,solt/cmd/lp,solt/cmd/va,solt/solution -covermode=atomic solt/...
 
     - name: Send coverage
+      if: matrix.build == 'linux'
       run: |
         curl -Os https://uploader.codecov.io/latest/linux/codecov
         chmod +x codecov
