ci: trying to fix running benchmarks on Windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
       run: go test solt/...
 
     - name: Benchmarks
+      shell: bash
       run: go test -bench=. solt/internal/fw
 
     - name: Send coverage
