ci: fuzzing working directory corrected

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
 
     - name: Fuzzing
       shell: bash
-      working-directory: solt/solution
+      working-directory: solution
       run: go test -fuzz=Fuzz* -fuzztime 120s
 
     - name: Send coverage
