--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,11 +54,11 @@ jobs:
       if: matrix.build != 'linux'
       run: go test ./...
 
-    - name: Static analysis
-      uses: dominikh/staticcheck-action@v1.3.1
-      with:
-        version: "2022.1.3"
-        install-go: true
+    # - name: Static analysis
+    #   uses: dominikh/staticcheck-action@v1.3.1
+    #   with:
+    #     version: "2022.1.3"
+    #     install-go: true
 
     - name: Benchmarks
       shell: bash
