--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,5 @@
+version: 2
+
 env:
   - GO111MODULE=on
 before:
@@ -21,7 +23,7 @@ builds:
       - linux
       - windows
     goarch:
-      - 386
+      - "386"
 
   - id: "arm"
     binary: solt
@@ -31,7 +33,7 @@ builds:
     goarch:
       - arm
     goarm:
-      - 7
+      - "7"
 
   - id: "arm64"
     binary: solt
@@ -43,11 +45,11 @@ builds:
 
 archives:
   - id: default
-    builds:
+    ids:
       - x64
       - arm
       - arm64
-      - 386
+      - "386"
 
 brews:
 -
@@ -92,5 +94,5 @@ signs:
 checksum:
   name_template: "checksums.txt"
 snapshot:
-  name_template: "{{ .Tag }}"
+  version_template: "{{ .Tag }}"
 
